# SkyRizz-E32

./: README.md
PCB/: skyrizz_e32_se050.epro
PCB/pinout/: no_std_board_pins.rs  no_std_board_self_test.rs  pin_capabilities.md  pin_map.md
PCB/v1.0/: BOM-SKYRIZZ-E32-v1.0.xlsx  PickAndPlace_E32-v1.0.xlsx
PCB/v1.1/: BOM-SKYRIZZ-E32-v1.1.xlsx  PickAndPlace_PCB1_8_2026-06-18.xlsx  skyrizz_e32._se050-v1.1.epro
examples/display_testing_menu/: Cargo.toml
examples/display_testing_menu/src/: camera.rs  main.rs
